[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "authlib==1.6.0",
    "beautifulsoup4==4.13.4",
    "braq==0.0.12",
    "breadability==0.1.20",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.4",
    "distro==1.9.0",
    "docopt==0.6.2",
    "ecdsa==0.19.1",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.13",
    "fastapi-decorators==1.0.17",
    "fastapi-mcp==0.3.7",
    "fastmcp==2.9.1",
    "greenlet==3.2.3",
    "groq==0.29.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "joblib==1.5.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "kvf==0.0.3",
    "langchain-core==0.3.66",
    "langchain-mcp-adapters==0.1.7",
    "langsmith==0.4.3",
    "logging==0.4.9.6",
    "lxml==6.0.0",
    "markdown-it-py==3.0.0",
    "mcp==1.9.4",
    "mdurl==0.1.2",
    "multipart>=1.3.0",
    "nltk==3.9.1",
    "openapi-pydantic==0.5.1",
    "orjson==3.10.18",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "paradict==0.0.16",
    "playwright==1.54.0",
    "pyasn1==0.6.1",
    "pycountry==24.6.1",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.0",
    "pyee==13.0.0",
    "pygments==2.19.2",
    "pysocks==1.7.1",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rsa==4.9.1",
    "selenium==4.34.2",
    "setuplog==0.4.1",
    "shared==0.0.32",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "sqlalchemy==2.0.42",
    "sse-starlette==2.3.6",
    "starlette==0.46.2",
    "sumy==0.11.0",
    "tenacity==9.1.2",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typer==0.16.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uv==0.7.13",
    "uvicorn==0.34.3",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
    "zstandard==0.23.0",
]
